--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -200,7 +200,7 @@ Mixins File for Wordpress Theme FAU
     text-decoration: underline;
     text-decoration-color:  var(--color-primary-ci-hell);
     text-underline-offset: 3px;
-    padding: 1px;
+ //   padding: 1px;
 
     &:active,
     &:focus,
