--- a/src/sass/plugins/_rrze-glossary.scss
+++ b/src/sass/plugins/_rrze-glossary.scss
@@ -3,39 +3,37 @@
  */
 
 
-
-.fau-glossar {
+#content .fau-glossar {
     .letters {
 	text-align: center;
 
 	li {
 	   
 	    color: var(--color-TextLight);
-	    @include px2rem($font-size-textbuttons);
-	    width: 2rem;
-	    height: 2rem;
+	    
+	    width: 2.5rem;
+	    height: 2.5rem;
 	    margin: 0.2rem;
-	    padding: 0.2rem;
+	    padding: 0;
 	    text-align: center;
 	    vertical-align: middle;
 	    border: 1px solid var(--color-StandardHellgrau);
-	    @include border-radius(4px);
+	  
+	    span {
+		 color: var(--color-TextLight);
+	    }
+	    span, a {
+		@include px2rem($font-size-textbuttons);
+		width: 100%;
+		line-height: 2.5rem;
+		padding: 0.2rem;		
+		@include border-radius(4px);
+		
+	    }
 
-	   
-
-	    &.filled {
-		font-weight: bold;
-		padding: 0;
-
-		a {
-		     padding: 0.2rem;
-		     
-		     width: 100%;
+	    a {
 		     @include defaultlinkstyle();
 		     @include buttoncolor();
-		     @include border-radius(4px);
-                     
-                     line-height: 2rem;
                      text-decoration: none;
 		}
 
@@ -43,7 +41,7 @@
 		a:focus {
 		    text-decoration: underline;
 		}
-	    }
+
 
 
 	}
