--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -104,7 +104,7 @@
             text-decoration: underline;
             color: var(--color-mainmenu-sublevel-hover-text);
             background-color: var(--color-mainmenu-sublevel-hover-bg);
-	    @include border-radius(3px);
+	        @include border-radius(3px);
         }
     }
 
@@ -117,11 +117,10 @@
     /* Portal buttons */
     .button-portal {
         @include inline-block;
-
         font-weight: normal;
-	@include buttonstyle();
-	@include px2rem($font-size-nav-buttons);
-	padding: 0.5rem 1rem;
+        @include buttonstyle();
+        @include px2rem($font-size-nav-buttons);
+        padding: 0.5rem 1rem;
     }
 
     ul {
@@ -176,7 +175,7 @@
                     }
 
                     > a {
-			@include px2rem($font-size-nav-level2);
+			            @include px2rem($font-size-nav-level2);
                         border-bottom-color: var(--color-primary-dunkler);
                         padding-left: $padding-base-horizontal;
 
@@ -184,8 +183,7 @@
                 }
 
                 &.level3 a {
-		    @include px2rem($font-size-nav-level3);
-                    padding-left: $padding-base-horizontal;
+		            @include px2rem($font-size-nav-level3);
                 }
             }
 
@@ -284,12 +282,17 @@
     }
 
     .nav {
+        border-top: 1px solid var(--color-primary-ci-hell);
+
         .nav-flyout {
             padding-top: 0;
         }
 
         > li {
             border-top: 1px solid $colorOverlayDark; // #ccc;
+            &:first-child {
+                border-top-color: transparent;
+            }
 
             &.level1 {
                 &:hover, &:focus {
@@ -303,9 +306,13 @@
 
                 > a,
                 > [type=button] {
+                    margin: 0;
+                    cursor: pointer;
+
                     &[aria-expanded=true] {
                         background-color: var(--color-primary-dunkler);
                         color: var(--color-primary-dunkler-kontrast);
+                        border-radius: 0;
                     }
 
                     &:hover, &:focus {
@@ -317,10 +324,15 @@
         }
     }
 
-
-
     .level2 {
         border-top: 1px solid #1f4c7a;
+    }
+    .level3 {
+        li {
+            a {
+                padding-left: $padding-base-horizontal * 2.5;
+            }
+        }
     }
 
     .no-js #nav:target {
