--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.0.5-4
+Version: 2.0.5-5
 Requires at least: 5.0
 Tested up to: 5.8
 Requires PHP: 7.4
@@ -9489,7 +9489,6 @@ body:not(.mainnav-forceclick):not(.ismobile) .nav > li.has-sub:focus-within .nav
   .mainnav-plainview .nav ul.level3 a {
     font-size: 0.937rem;
     line-height: 1.407rem;
-    padding-left: 12px;
   }
   .mainnav-plainview .nav .flyout-entries-full {
     column-count: 3;
@@ -9576,11 +9575,17 @@ body:not(.mainnav-forceclick):not(.ismobile) .nav > li.has-sub:focus-within .nav
     display: none;
   }
 
+  .nav {
+    border-top: 1px solid var(--color-primary-ci-hell);
+  }
   .nav .nav-flyout {
     padding-top: 0;
   }
   .nav > li {
     border-top: 1px solid rgba(0, 0, 0, 0.15);
+  }
+  .nav > li:first-child {
+    border-top-color: transparent;
   }
   .nav > li.level1:hover, .nav > li.level1:focus {
     border-top: 1px solid var(--color-primary-dunkelste);
@@ -9588,10 +9593,16 @@ body:not(.mainnav-forceclick):not(.ismobile) .nav > li.has-sub:focus-within .nav
   .nav > li.level1:hover + li, .nav > li.level1:focus + li {
     border-top: 1px solid var(--color-primary-dunkelste);
   }
+  .nav > li.level1 > a,
+.nav > li.level1 > [type=button] {
+    margin: 0;
+    cursor: pointer;
+  }
   .nav > li.level1 > a[aria-expanded=true],
 .nav > li.level1 > [type=button][aria-expanded=true] {
     background-color: var(--color-primary-dunkler);
     color: var(--color-primary-dunkler-kontrast);
+    border-radius: 0;
   }
   .nav > li.level1 > a:hover, .nav > li.level1 > a:focus,
 .nav > li.level1 > [type=button]:hover,
@@ -9602,6 +9613,10 @@ body:not(.mainnav-forceclick):not(.ismobile) .nav > li.has-sub:focus-within .nav
 
   .level2 {
     border-top: 1px solid #1f4c7a;
+  }
+
+  .level3 li a {
+    padding-left: 30px;
   }
 
   .no-js #nav:target #mainnav-toggle {
