--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.0.5
+Version: 2.0.6-0
 Requires at least: 5.0
 Tested up to: 5.8
 Requires PHP: 7.4
@@ -11575,6 +11575,7 @@ ol.breadcrumblist li:last-child::after {
 }
 @media (min-width: 992px) {
   .inline-box .sidebar-inline {
+    align-self: flex-start;
     width: 235px;
     border-top: none;
     margin-top: 0;
@@ -11589,6 +11590,7 @@ ol.breadcrumblist li:last-child::after {
 
 @media (min-width: 768px) {
   .content-row .portalpage-sidebar {
+    align-self: flex-start;
     width: 33%;
     max-width: 350px;
     margin-top: 0;
@@ -11678,6 +11680,7 @@ ol.breadcrumblist li:last-child::after {
 }
 @media (min-width: 768px) {
   #content .post-row .sidebar-single {
+    align-self: flex-start;
     padding-right: 0;
     max-width: 330px;
   }
